<resources>
    <string name="app_name">DemoApp</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email-id</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_failed">"Sign up failed"</string>
    <string name="log_out">Log out</string>
    <string name="sign_in_instead">Already have an account?\nLog in instead</string>
    <string name="proceed_to_sign_up">New here?\nProceed to sign up.</string>
    <string name="login_header_text">Login with your credentials</string>
    <string name="please_enter_email_pass">Create new account</string>
</resources>